re PR c/48778 (gcc 4.6 -Waddress adds unhelpful new warning case when using from a macro)

PR c/48778
	* c-typeck.c (build_binary_op): Don't issue -Waddress warnings
	for macro expansions.

	* gcc.dg/Waddress-2.c: New test.

From-SVN: r235878